crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-pepper[file]_view_saffron_q4_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: saffron_q4"
---
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: rand() ASC NULLS LAST, fetch=1                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
|               |   SubqueryAlias: A                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
|               |     BytesProcessedNode                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
|               |       Filter: number_info_with_cap.AccountSid = LargeUtf8("AC02da2b759e8342d4b73ff6e64a77ce58") AND number_info_with_cap.NumberPoolSid = LargeUtf8("NPcb39bd63c0a54ab8b106d8f9e0aa6507") AND number_info_with_cap.NumberRegion = LargeUtf8("CA") AND number_info_with_cap.NumberType = LargeUtf8("tf") AND number_info_with_cap.AreaCodeRegion = LargeUtf8("212") AND number_info_with_cap.MaxRate = Int32(49) AND number_info_with_cap.NumberSid != LargeUtf8("PN00000000000000000000000000000099") AND number_info_with_cap.Capability = LargeUtf8("sms") AND (number_info_with_cap.AvailableForNumberSelection = Int8(1) OR number_info_with_cap.AvailableForNumberSelection = Int8(0))                                                                                                                                                                                                                                                                                                                                  |
|               |         TableScan: number_info_with_cap projection=[DateCreated, DateUpdated, AccountSid, NumberPoolSid, NumberSid, MaxRate, NumberDid, NumberType, SupportedDestRegion, NumberRegion, CurrentRate, IsAvailable, ProviderSid, AreaCodeRegion, AvailableForNumberSelection, Capability], partial_filters=[number_info_with_cap.AccountSid = LargeUtf8("AC02da2b759e8342d4b73ff6e64a77ce58"), number_info_with_cap.NumberPoolSid = LargeUtf8("NPcb39bd63c0a54ab8b106d8f9e0aa6507"), number_info_with_cap.NumberRegion = LargeUtf8("CA"), number_info_with_cap.NumberType = LargeUtf8("tf"), number_info_with_cap.AreaCodeRegion = LargeUtf8("212"), number_info_with_cap.MaxRate = Int32(49), number_info_with_cap.NumberSid != LargeUtf8("PN00000000000000000000000000000099"), number_info_with_cap.Capability = LargeUtf8("sms"), number_info_with_cap.AvailableForNumberSelection = Int8(1) OR number_info_with_cap.AvailableForNumberSelection = Int8(0)]                                                                |
| physical_plan | SortPreservingMergeExec: [rand() ASC NULLS LAST], fetch=1                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
|               |   SortExec: TopK(fetch=1), expr=[rand() ASC NULLS LAST], preserve_partitioning=[true]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
|               |     BytesProcessedExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
|               |       CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
|               |         FilterExec: AccountSid@2 = AC02da2b759e8342d4b73ff6e64a77ce58 AND NumberPoolSid@3 = NPcb39bd63c0a54ab8b106d8f9e0aa6507 AND NumberRegion@9 = CA AND NumberType@7 = tf AND AreaCodeRegion@13 = 212 AND MaxRate@5 = 49 AND NumberSid@4 != PN00000000000000000000000000000099 AND Capability@15 = sms AND (AvailableForNumberSelection@14 = 1 OR AvailableForNumberSelection@14 = 0)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
|               |           SchemaCastScanExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
|               |             DataSourceExec: file_groups={32 groups: [[/data/number_info_with_cap/<PEPPER_PATH>.vortex:<RANGE>], [/data/number_info_with_cap/<PEPPER_PATH>.vortex:<RANGE>], [/data/number_info_with_cap/<PEPPER_PATH>.vortex:<RANGE>], [/data/number_info_with_cap/<PEPPER_PATH>.vortex:<RANGE>], [/data/number_info_with_cap/<PEPPER_PATH>.vortex:<RANGE>], ...]}, projection=[DateCreated, DateUpdated, AccountSid, NumberPoolSid, NumberSid, MaxRate, NumberDid, NumberType, SupportedDestRegion, NumberRegion, CurrentRate, IsAvailable, ProviderSid, AreaCodeRegion, AvailableForNumberSelection, Capability], file_type=vortex |
|               |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
